Fixed mobile spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -401,7 +401,7 @@ text-transform: uppercase;
 .menu-square.special-home {
     position: relative;
     padding-top: 0px;
-    margin-top: 100px;
+    margin-top: 60px;
     background-color: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 }
@@ -661,6 +661,10 @@ footer svg {
     width: 80%;
     margin-left: 10%;
     padding-top: 80%;     
+}
+        
+.menu-square.special-home {
+    margin-top: 90px;
 }
         
 
